--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -35,7 +35,7 @@
           <li class="nav-item" style="margin-top: .5em" *ngIf="isLoggedIn">
             <a class="nav-link sign-up" style="margin-right:.5em" href="#" (click)="logout()">Logout</a>
             </li>
-            <!-- Dropdown (maybe whenever a user is logged in, the dropdown will appear and you can select user info from there) -->
+            <!-- Dropdown  -->
                 <li class="nav-item dropdown" *ngIf="isLoggedIn">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 {{username}}
